--- a/package.json
+++ b/package.json
@@ -9,17 +9,32 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.7.5",
+    "@foundation-ui/components": "^1.2.0",
+    "@foundation-ui/core": "^1.2.0",
+    "@foundation-ui/hooks": "^1.2.0",
+    "@foundation-ui/styles": "^1.3.0",
+    "@foundation-ui/tokens": "^1.2.0",
+    "@hookform/resolvers": "^3.10.0",
+    "@prisma/client": "^5.22.0",
+    "@tanstack/react-query": "^5.66.0",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "sonner": "^1.7.4",
+    "styled-components": "^5.3.11",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
     "@types/node": "^20.17.17",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "date-fns": "^4.1.0",
     "eslint": "^9.20.1",
     "eslint-config-next": "15.1.7",
+    "prisma": "^5.22.0",
     "typescript": "^5.7.3"
   }
 }
