--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@types/node": "^20.17.17",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
+    "@types/styled-components": "^5.1.34",
     "date-fns": "^4.1.0",
     "eslint": "^9.20.1",
     "eslint-config-next": "15.1.7",
