--- a/package.json
+++ b/package.json
@@ -2,38 +2,47 @@
   "name": "token-engine",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
+    "check": "next lint && tsc --noEmit",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
+    "dev": "next dev --turbo",
+    "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
+    "format:write": "prettier --write \"**/*.{ts,tsx,js,jsx,mdx}\" --cache",
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "preview": "next build && next start",
     "start": "next start",
-    "lint": "next lint"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@clerk/nextjs": "^5.7.5",
-    "@foundation-ui/components": "^1.3.2",
-    "@foundation-ui/core": "^1.2.0",
-    "@foundation-ui/hooks": "^1.2.0",
-    "@foundation-ui/styles": "^1.3.0",
-    "@foundation-ui/tokens": "^1.3.3",
-    "@hookform/resolvers": "^3.10.0",
-    "@tanstack/react-query": "^5.66.0",
-    "next": "15.1.7",
+    "@libsql/client": "^0.14.0",
+    "@t3-oss/env-nextjs": "^0.12.0",
+    "drizzle-orm": "^0.41.0",
+    "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.54.2",
-    "sonner": "^1.7.4",
-    "styled-components": "^5.3.11",
-    "zod": "^3.24.1"
+    "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3.2.0",
-    "@types/node": "^20.17.17",
-    "@types/react": "^19.0.8",
-    "@types/react-dom": "^19.0.3",
-    "@types/styled-components": "^5.1.34",
-    "date-fns": "^4.1.0",
-    "eslint": "^9.20.1",
-    "eslint-config-next": "15.1.7",
-    "typescript": "^5.7.3"
-  }
+    "@eslint/eslintrc": "^3.3.1",
+    "@types/node": "^20.14.10",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "drizzle-kit": "^0.30.5",
+    "eslint": "^9.23.0",
+    "eslint-config-next": "^15.2.3",
+    "eslint-plugin-drizzle": "^0.2.3",
+    "prettier": "^3.5.3",
+    "typescript": "^5.8.2",
+    "typescript-eslint": "^8.27.0"
+  },
+  "ct3aMetadata": {
+    "initVersion": "7.39.0"
+  },
+  "packageManager": "pnpm@9.1.1"
 }
