--- a/package.json
+++ b/package.json
@@ -26,7 +26,18 @@
     "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "@foundation-ui/components": "^1.3.2",
+    "@foundation-ui/core": "^1.2.0",
+    "@foundation-ui/hooks": "^1.2.0",
+    "@foundation-ui/styles": "^1.3.0",
+    "@foundation-ui/tokens": "^1.3.3",
+    "@hookform/resolvers": "^3.10.0",
+    "@tanstack/react-query": "^5.66.0",
+    "react-hook-form": "^7.54.2",
+    "sonner": "^1.7.4",
+    "date-fns": "^4.1.0",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
@@ -39,7 +50,8 @@
     "eslint-plugin-drizzle": "^0.2.3",
     "prettier": "^3.5.3",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.27.0"
+    "typescript-eslint": "^8.27.0",
+    "@types/styled-components": "^5.1.34"
   },
   "ct3aMetadata": {
     "initVersion": "7.39.0"
