--- a/package.json
+++ b/package.json
@@ -20,38 +20,38 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@libsql/client": "^0.14.0",
-    "@t3-oss/env-nextjs": "^0.12.0",
-    "drizzle-orm": "^0.41.0",
-    "next": "^15.2.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "zod": "^3.24.2",
-    "@foundation-ui/components": "^1.4.0",
+    "@foundation-ui/components": "^1.4.5",
     "@foundation-ui/core": "^1.3.0",
     "@foundation-ui/hooks": "^1.3.0",
     "@foundation-ui/styles": "^1.4.0",
     "@foundation-ui/tokens": "^1.5.0",
     "@hookform/resolvers": "^3.10.0",
+    "@libsql/client": "^0.14.0",
+    "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.66.0",
+    "date-fns": "^4.1.0",
+    "drizzle-orm": "^0.41.0",
+    "next": "^15.2.3",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "sonner": "^1.7.4",
-    "date-fns": "^4.1.0",
-    "styled-components": "^5.3.11"
+    "styled-components": "^6.1.16",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/styled-components": "^5.1.34",
     "drizzle-kit": "^0.30.5",
     "eslint": "^9.23.0",
     "eslint-config-next": "^15.2.3",
     "eslint-plugin-drizzle": "^0.2.3",
     "prettier": "^3.5.3",
     "typescript": "^5.8.2",
-    "typescript-eslint": "^8.27.0",
-    "@types/styled-components": "^5.1.34"
+    "typescript-eslint": "^8.27.0"
   },
   "ct3aMetadata": {
     "initVersion": "7.39.0"
