--- a/package.json
+++ b/package.json
@@ -20,15 +20,19 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@codemirror/lang-json": "^6.0.1",
     "@foundation-ui/components": "^1.4.5",
     "@foundation-ui/core": "^1.3.0",
     "@foundation-ui/hooks": "^1.3.0",
     "@foundation-ui/styles": "^1.4.0",
     "@foundation-ui/tokens": "^1.5.0",
     "@hookform/resolvers": "^3.10.0",
+    "@lezer/highlight": "^1.2.1",
     "@libsql/client": "^0.14.0",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.66.0",
+    "@uiw/codemirror-themes": "^4.23.10",
+    "@uiw/react-codemirror": "^4.23.10",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.41.0",
     "next": "^15.2.3",
