--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@foundation-ui/hooks": "^1.3.0",
     "@foundation-ui/styles": "^1.4.0",
     "@foundation-ui/tokens": "^1.5.0",
+    "@foundation-ui/icons": "^1.0.1",
+    "@foundation-ui/analytics": "^1.0.1",
     "@hookform/resolvers": "^3.10.0",
     "@lezer/highlight": "^1.2.1",
     "@libsql/client": "^0.14.0",
