--- a/package.json
+++ b/package.json
@@ -21,13 +21,13 @@
   },
   "dependencies": {
     "@codemirror/lang-json": "^6.0.1",
+    "@foundation-ui/analytics": "^1.0.1",
     "@foundation-ui/components": "^1.4.5",
     "@foundation-ui/core": "^1.3.0",
     "@foundation-ui/hooks": "^1.3.0",
+    "@foundation-ui/icons": "^1.0.1",
     "@foundation-ui/styles": "^1.4.0",
     "@foundation-ui/tokens": "^1.5.0",
-    "@foundation-ui/icons": "^1.0.1",
-    "@foundation-ui/analytics": "^1.0.1",
     "@hookform/resolvers": "^3.10.0",
     "@lezer/highlight": "^1.2.1",
     "@libsql/client": "^0.14.0",
@@ -37,6 +37,7 @@
     "@uiw/react-codemirror": "^4.23.10",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.41.0",
+    "mysql2": "^3.14.0",
     "next": "^15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
