--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,15 @@
-# Since the ".env" file is gitignored, you can use the ".env.example" file to
-# build a new ".env" file when you clone the repo. Keep this file up-to-date
-# when you add new variables to `.env`.
-
-# This file will be committed to version control, so make sure not to have any
-# secrets in it. If you are cloning this repo, create a copy of this file named
-# ".env" and populate it with your secrets.
-
-# When adding additional environment variables, the schema in "/src/env.js"
-# should be updated accordingly.
-
 # Drizzle
-DATABASE_URL="file:./db.sqlite"
+DATABASE_URL="DATABASE_URL"
 
-# Example:
-# SERVERVAR="foo"
-# NEXT_PUBLIC_CLIENTVAR="bar"
+# Npm
+NPM_TOKEN="NPM_TOKEN"
+NPM_USERNAME="NPM_USERNAME"
+
+# Singlestore
+SINGLESTORE_USER="SINGLESTORE_USER"
+SINGLESTORE_PASS="SINGLESTORE_PASS"
+SINGLESTORE_HOST="SINGLESTORE_HOST"
+SINGLESTORE_PORT="SINGLESTORE_PORT"
+SINGLESTORE_DB_NAME="SINGLESTORE_DB_NAME"
+SINGLESTORE_CONNECTION_STRING="SINGLESTORE_CONNECTION_STRING"
+SINGLESTORE_TABLES_PREFIX="SINGLESTORE_TABLES_PREFIX"
