--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@codemirror/lang-css": "^6.3.1",
     "@codemirror/lang-json": "^6.0.1",
+    "@codemirror/language": "^6.11.0",
     "@foundation-ui/analytics": "^1.0.1",
     "@foundation-ui/components": "^1.4.7",
     "@foundation-ui/core": "^1.3.0",
