--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,7 @@ SINGLESTORE_PORT="SINGLESTORE_PORT"
 SINGLESTORE_DB_NAME="SINGLESTORE_DB_NAME"
 SINGLESTORE_CONNECTION_STRING="SINGLESTORE_CONNECTION_STRING"
 SINGLESTORE_TABLES_PREFIX="SINGLESTORE_TABLES_PREFIX"
+
+# Clerk
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY"
+CLERK_SECRET_KEY="CLERK_SECRET_KEY"
