--- a/.env.example
+++ b/.env.example
@@ -17,3 +17,7 @@ SINGLESTORE_TABLES_PREFIX="SINGLESTORE_TABLES_PREFIX"
 # Clerk
 NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY"
 CLERK_SECRET_KEY="CLERK_SECRET_KEY"
+
+# Posthog
+NEXT_PUBLIC_POSTHOG_KEY="NEXT_PUBLIC_POSTHOG_KEY"
+NEXT_PUBLIC_POSTHOG_HOST="NEXT_PUBLIC_POSTHOG_HOST"
