--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "drizzle-orm": "^0.41.0",
     "mysql2": "^3.14.0",
     "next": "^15.2.3",
+    "posthog-js": "^1.239.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
