--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-hook-form": "^7.54.2",
     "sonner": "^1.7.4",
     "styled-components": "^6.1.16",
-    "zod": "^3.24.2"
+    "zod": "^3.24.2",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
