Remove clerk from app

--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@clerk/nextjs": "^6.17.0",
     "@codemirror/lang-css": "^6.3.1",
     "@codemirror/lang-json": "^6.0.1",
     "@codemirror/language": "^6.11.0",
@@ -36,6 +35,7 @@
     "@uiw/react-codemirror": "^4.23.10",
     "mysql2": "^3.14.0",
     "next": "^15.2.3",
+    "next-mdx-remote": "^5.0.0",
     "posthog-js": "^1.239.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
