--- a/package.json
+++ b/package.json
@@ -28,10 +28,15 @@
     "@foundation-ui/tokens": "^1.5.0",
     "@hookform/resolvers": "^3.10.0",
     "@lezer/highlight": "^1.2.1",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.3.4",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.66.0",
     "@uiw/codemirror-themes": "^4.23.10",
     "@uiw/react-codemirror": "^4.23.10",
+    "glob": "^11.0.3",
+    "gray-matter": "^4.0.3",
     "next": "^15.2.3",
     "next-mdx-remote": "^5.0.0",
     "posthog-js": "^1.239.1",
