--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-syntax-highlighter": "^15.6.1",
     "sonner": "^1.7.4",
     "styled-components": "^6.1.16",
     "zod": "^3.24.2",
@@ -53,6 +54,7 @@
     "@types/node": "^20.14.10",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/styled-components": "^5.1.34",
     "date-fns": "^4.1.0",
     "eslint": "^9.23.0",
