--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@codemirror/lang-css": "^6.3.1",
+    "@codemirror/lang-javascript": "^6.2.4",
     "@codemirror/lang-json": "^6.0.2",
     "@codemirror/language": "^6.11.2",
     "@hookform/resolvers": "^3.10.0",
@@ -29,12 +30,12 @@
     "@uiw/codemirror-themes": "^4.24.2",
     "@uiw/react-codemirror": "^4.24.2",
     "@usefui/analytics": "^1.0.3",
-    "@usefui/components": "^1.5.1",
-    "@usefui/core": "^1.3.3",
-    "@usefui/hooks": "^1.3.3",
-    "@usefui/icons": "^1.1.4",
-    "@usefui/styles": "^1.4.3",
-    "@usefui/tokens": "^1.5.2",
+    "@usefui/components": "^1.5.2",
+    "@usefui/core": "^1.3.4",
+    "@usefui/hooks": "^1.3.4",
+    "@usefui/icons": "^1.1.5",
+    "@usefui/styles": "^1.4.4",
+    "@usefui/tokens": "^1.5.3",
     "glob": "^11.0.3",
     "gray-matter": "^4.0.3",
     "next": "^15.4.6",
