--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.4.6",
+    "@paper-design/shaders-react": "^0.0.60",
     "@t3-oss/env-nextjs": "^0.12.0",
     "@tanstack/react-query": "^5.85.0",
     "@uiw/codemirror-themes": "^4.24.2",
